// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PriceLockup renders with default props 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 > *:not(:last-child) {
  margin-bottom: 0.5rem;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 > *:not(:last-child) {
  margin-bottom: 0.25rem;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c4 > *:not(:last-child) {
  margin-right: 0.25rem;
}

.c7 {
  color: #2a2c2e;
  word-wrap: break-word;
  font-size: 0.875rem;
  -webkit-letter-spacing: -0.6px;
  -moz-letter-spacing: -0.6px;
  -ms-letter-spacing: -0.6px;
  letter-spacing: -0.6px;
  line-height: 1.42857;
  font-weight: 500;
  word-wrap: break-word;
  font-size: 0.875rem;
  -webkit-letter-spacing: -0.6px;
  -moz-letter-spacing: -0.6px;
  -ms-letter-spacing: -0.6px;
  letter-spacing: -0.6px;
  line-height: 1;
}

.c7 sup {
  top: -0.5em;
  font-size: 0.875rem;
  position: relative;
  vertical-align: baseline;
  padding-left: 0.1em;
}

.c6 {
  word-wrap: break-word;
  padding: 0;
  margin: 0;
  line-height: 1;
  font-size: 1.5rem;
  font-weight: 400;
  -webkit-letter-spacing: -0.7px;
  -moz-letter-spacing: -0.7px;
  -ms-letter-spacing: -0.7px;
  letter-spacing: -0.7px;
}

.c8 {
  color: #2a2c2e;
  word-wrap: break-word;
  font-size: 0.875rem;
  -webkit-letter-spacing: -0.6px;
  -moz-letter-spacing: -0.6px;
  -ms-letter-spacing: -0.6px;
  letter-spacing: -0.6px;
  line-height: 1.42857;
  font-weight: 500;
  display: inline-block;
}

.c8 sup {
  top: -0.5em;
  font-size: 0.875rem;
  position: relative;
  vertical-align: baseline;
  padding-left: 0.1em;
}

.c5 {
  line-height: 1.5;
}

.c5 medium {
  word-wrap: break-word;
  font-size: 1rem;
  -webkit-letter-spacing: -0.8px;
  -moz-letter-spacing: -0.8px;
  -ms-letter-spacing: -0.8px;
  letter-spacing: -0.8px;
  line-height: 1.5;
}

.c0 {
  text-align: left;
}

.c3 {
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

@media (min-width:768px) {
  .c6 {
    font-size: 1.75rem;
    -webkit-letter-spacing: -0.8px;
    -moz-letter-spacing: -0.8px;
    -ms-letter-spacing: -0.8px;
    letter-spacing: -0.8px;
  }
}

<div
  class="c0 sc-bxivhb c0 c1"
>
  <div
    class="c2"
  >
    <div
      class="c3 sc-ifAKCX c3 c4"
      id="wrapperRef"
    >
      <div
        id="containerRef"
      >
        <div
          class="c4"
        >
          <span
            class="c5"
            data-testid="dollarSign"
          >
            $
          </span>
          <span
            class="c6"
            data-testid="priceValue"
          >
            25
          </span>
        </div>
      </div>
      <span
        class="c7"
        data-testid="rateText"
      >
        /month
        <span
          class="c8"
          id="footnoteLinks"
        />
      </span>
    </div>
  </div>
</div>
`;

exports[`PriceLockup size prop is large renders 1`] = `
.c3 {
  color: #2a2c2e;
  word-wrap: break-word;
  font-size: 1.25rem;
  -webkit-letter-spacing: -1px;
  -moz-letter-spacing: -1px;
  -ms-letter-spacing: -1px;
  letter-spacing: -1px;
  line-height: 1.6;
  word-wrap: break-word;
  font-weight: 400;
}

.c3 sup {
  top: -0.5em;
  font-size: 0.875rem;
  position: relative;
  vertical-align: baseline;
  padding-left: 0.1em;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 > *:not(:last-child) {
  margin-bottom: 0.5rem;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c5 > *:not(:last-child) {
  margin-right: 0.5rem;
}

.c2 {
  display: block;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c8 {
  color: #2a2c2e;
  word-wrap: break-word;
  font-size: 1.25rem;
  -webkit-letter-spacing: -1px;
  -moz-letter-spacing: -1px;
  -ms-letter-spacing: -1px;
  letter-spacing: -1px;
  line-height: 1.6;
  word-wrap: break-word;
  font-weight: 400;
  word-wrap: break-word;
  font-size: 1.25rem;
  -webkit-letter-spacing: -1px;
  -moz-letter-spacing: -1px;
  -ms-letter-spacing: -1px;
  letter-spacing: -1px;
  line-height: 1.6;
}

.c8 sup {
  top: -0.5em;
  font-size: 0.875rem;
  position: relative;
  vertical-align: baseline;
  padding-left: 0.1em;
}

.c7 {
  word-wrap: break-word;
  padding: 0;
  margin: 0;
  line-height: 1;
  font-size: 2.75rem;
  font-weight: 300;
}

.c9 {
  color: #2a2c2e;
  word-wrap: break-word;
  font-size: 1.25rem;
  -webkit-letter-spacing: -1px;
  -moz-letter-spacing: -1px;
  -ms-letter-spacing: -1px;
  letter-spacing: -1px;
  line-height: 1.6;
  word-wrap: break-word;
  font-weight: 400;
  display: inline-block;
}

.c9 sup {
  top: -0.5em;
  font-size: 0.875rem;
  position: relative;
  vertical-align: baseline;
  padding-left: 0.1em;
}

.c6 {
  color: #2a2c2e;
  font-weight: 400;
  font-size: 1.75rem;
  line-height: 1.3;
  -webkit-letter-spacing: -1.6px;
  -moz-letter-spacing: -1.6px;
  -ms-letter-spacing: -1.6px;
  letter-spacing: -1.6px;
}

.c0 {
  text-align: left;
}

.c4 {
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

@media (min-width:768px) {
  .c7 {
    font-size: 4.5rem;
    -webkit-letter-spacing: 0.2px;
    -moz-letter-spacing: 0.2px;
    -ms-letter-spacing: 0.2px;
    letter-spacing: 0.2px;
  }
}

@media (min-width:768px) {
  .c6 {
    font-weight: 300;
    font-size: 2.75rem;
    -webkit-letter-spacing: 0;
    -moz-letter-spacing: 0;
    -ms-letter-spacing: 0;
    letter-spacing: 0;
  }
}

<div
  class="c0 sc-bxivhb c0 c1"
>
  <div
    class="c2"
  >
    <span
      class="c3"
    >
      top text
    </span>
    <div
      class="c4 sc-ifAKCX c4 c5"
      id="wrapperRef"
    >
      <div
        id="containerRef"
      >
        <div
          class="c5"
        >
          <span
            class="c6"
            data-testid="dollarSign"
          >
            $
          </span>
          <span
            class="c7"
            data-testid="priceValue"
          >
            25
          </span>
        </div>
      </div>
      <span
        class="c8"
        data-testid="rateText"
      >
        /month
        <span
          class="c9"
          id="footnoteLinks"
        />
      </span>
    </div>
  </div>
</div>
`;

exports[`PriceLockup size prop is medium renders 1`] = `
.c10 {
  padding: 0;
  margin: 0;
  border-width: 0;
  -webkit-transform: rotate(-0.00001deg);
  -ms-transform: rotate(-0.00001deg);
  transform: rotate(-0.00001deg);
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 100%;
  height: 1px;
  background-color: #d8d8d8;
}

.c3 {
  color: #2a2c2e;
  word-wrap: break-word;
  font-size: 0.875rem;
  -webkit-letter-spacing: -0.6px;
  -moz-letter-spacing: -0.6px;
  -ms-letter-spacing: -0.6px;
  letter-spacing: -0.6px;
  line-height: 1.42857;
  font-weight: 500;
}

.c3 sup {
  top: -0.5em;
  font-size: 0.875rem;
  position: relative;
  vertical-align: baseline;
  padding-left: 0.1em;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 > *:not(:last-child) {
  margin-bottom: 0.25rem;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c6 > *:not(:last-child) {
  margin-right: 0.25rem;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 > *:not(:last-child) {
  margin-bottom: 1rem;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c5 > *:not(:last-child) {
  margin-right: 0.5rem;
}

.c9 {
  color: #2a2c2e;
  word-wrap: break-word;
  font-size: 1rem;
  -webkit-letter-spacing: -0.8px;
  -moz-letter-spacing: -0.8px;
  -ms-letter-spacing: -0.8px;
  letter-spacing: -0.8px;
  line-height: 1.5;
  font-weight: 400;
  word-wrap: break-word;
  font-size: 1rem;
  -webkit-letter-spacing: -0.8px;
  -moz-letter-spacing: -0.8px;
  -ms-letter-spacing: -0.8px;
  letter-spacing: -0.8px;
  line-height: 1.5;
}

.c9 sup {
  top: -0.5em;
  font-size: 0.875rem;
  position: relative;
  vertical-align: baseline;
  padding-left: 0.1em;
}

.c8 {
  word-wrap: break-word;
  padding: 0;
  margin: 0;
  line-height: 1;
  font-size: 1.75rem;
  -webkit-letter-spacing: -1.6px;
  -moz-letter-spacing: -1.6px;
  -ms-letter-spacing: -1.6px;
  letter-spacing: -1.6px;
  font-weight: 400;
}

.c12 {
  color: #2a2c2e;
  word-wrap: break-word;
  font-size: 1rem;
  -webkit-letter-spacing: -0.8px;
  -moz-letter-spacing: -0.8px;
  -ms-letter-spacing: -0.8px;
  letter-spacing: -0.8px;
  line-height: 1.5;
  font-weight: 400;
  display: inline-block;
}

.c12 sup {
  top: -0.5em;
  font-size: 0.875rem;
  position: relative;
  vertical-align: baseline;
  padding-left: 0.1em;
}

.c7 {
  word-wrap: break-word;
  font-size: 1.25rem;
  -webkit-letter-spacing: -1px;
  -moz-letter-spacing: -1px;
  -ms-letter-spacing: -1px;
  letter-spacing: -1px;
  line-height: 1.6;
}

.c0 {
  text-align: left;
}

.c4 {
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c11 {
  color: #2a2c2e;
  word-wrap: break-word;
  font-size: 1rem;
  -webkit-letter-spacing: -0.8px;
  -moz-letter-spacing: -0.8px;
  -ms-letter-spacing: -0.8px;
  letter-spacing: -0.8px;
  line-height: 1.5;
  font-weight: 400;
}

.c11 sup {
  top: -0.5em;
  font-size: 0.875rem;
  position: relative;
  vertical-align: baseline;
  padding-left: 0.1em;
}

@media (min-width:768px) {
  .c8 {
    font-weight: 300;
    font-size: 2.75rem;
    -webkit-letter-spacing: 0;
    -moz-letter-spacing: 0;
    -ms-letter-spacing: 0;
    letter-spacing: 0;
  }
}

<div
  class="c0 sc-bxivhb c0 c1"
>
  <div
    class="c2"
  >
    <span
      class="c3"
    >
      top text
    </span>
    <div
      class="c4 sc-ifAKCX c4 c5"
      id="wrapperRef"
    >
      <div
        id="containerRef"
      >
        <div
          class="c6"
        >
          <span
            class="c7"
            data-testid="dollarSign"
          >
            $
          </span>
          <span
            class="c8"
            data-testid="priceValue"
          >
            25
          </span>
        </div>
      </div>
      <span
        class="c9"
        data-testid="rateText"
      >
        /month
      </span>
    </div>
  </div>
  <hr
    class="c10"
  />
  <div>
    <span
      class="c11"
    >
      bottom text
    </span>
    <span
      class="c12"
      id="footnoteLinks"
    />
  </div>
</div>
`;

exports[`PriceLockup size prop is small renders 1`] = `
.c9 {
  padding: 0;
  margin: 0;
  border-width: 0;
  -webkit-transform: rotate(-0.00001deg);
  -ms-transform: rotate(-0.00001deg);
  transform: rotate(-0.00001deg);
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 100%;
  height: 1px;
  background-color: #d8d8d8;
}

.c3 {
  color: #2a2c2e;
  word-wrap: break-word;
  font-size: 0.875rem;
  -webkit-letter-spacing: -0.6px;
  -moz-letter-spacing: -0.6px;
  -ms-letter-spacing: -0.6px;
  letter-spacing: -0.6px;
  line-height: 1.42857;
  font-weight: 500;
}

.c3 sup {
  top: -0.5em;
  font-size: 0.875rem;
  position: relative;
  vertical-align: baseline;
  padding-left: 0.1em;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 > *:not(:last-child) {
  margin-bottom: 0.5rem;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 > *:not(:last-child) {
  margin-bottom: 0.25rem;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c5 > *:not(:last-child) {
  margin-right: 0.25rem;
}

.c8 {
  color: #2a2c2e;
  word-wrap: break-word;
  font-size: 0.875rem;
  -webkit-letter-spacing: -0.6px;
  -moz-letter-spacing: -0.6px;
  -ms-letter-spacing: -0.6px;
  letter-spacing: -0.6px;
  line-height: 1.42857;
  font-weight: 500;
  word-wrap: break-word;
  font-size: 0.875rem;
  -webkit-letter-spacing: -0.6px;
  -moz-letter-spacing: -0.6px;
  -ms-letter-spacing: -0.6px;
  letter-spacing: -0.6px;
  line-height: 1;
}

.c8 sup {
  top: -0.5em;
  font-size: 0.875rem;
  position: relative;
  vertical-align: baseline;
  padding-left: 0.1em;
}

.c7 {
  word-wrap: break-word;
  padding: 0;
  margin: 0;
  line-height: 1;
  font-size: 1.5rem;
  font-weight: 400;
  -webkit-letter-spacing: -0.7px;
  -moz-letter-spacing: -0.7px;
  -ms-letter-spacing: -0.7px;
  letter-spacing: -0.7px;
}

.c11 {
  color: #2a2c2e;
  word-wrap: break-word;
  font-size: 0.875rem;
  -webkit-letter-spacing: -0.6px;
  -moz-letter-spacing: -0.6px;
  -ms-letter-spacing: -0.6px;
  letter-spacing: -0.6px;
  line-height: 1.42857;
  font-weight: 500;
  display: inline-block;
}

.c11 sup {
  top: -0.5em;
  font-size: 0.875rem;
  position: relative;
  vertical-align: baseline;
  padding-left: 0.1em;
}

.c6 {
  line-height: 1.5;
}

.c6 medium {
  word-wrap: break-word;
  font-size: 1rem;
  -webkit-letter-spacing: -0.8px;
  -moz-letter-spacing: -0.8px;
  -ms-letter-spacing: -0.8px;
  letter-spacing: -0.8px;
  line-height: 1.5;
}

.c0 {
  text-align: left;
}

.c4 {
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c10 {
  color: #2a2c2e;
  word-wrap: break-word;
  font-size: 0.875rem;
  -webkit-letter-spacing: -0.6px;
  -moz-letter-spacing: -0.6px;
  -ms-letter-spacing: -0.6px;
  letter-spacing: -0.6px;
  line-height: 1.42857;
  font-weight: 500;
}

.c10 sup {
  top: -0.5em;
  font-size: 0.875rem;
  position: relative;
  vertical-align: baseline;
  padding-left: 0.1em;
}

@media (min-width:768px) {
  .c7 {
    font-size: 1.75rem;
    -webkit-letter-spacing: -0.8px;
    -moz-letter-spacing: -0.8px;
    -ms-letter-spacing: -0.8px;
    letter-spacing: -0.8px;
  }
}

<div
  class="c0 sc-bxivhb c0 c1"
>
  <div
    class="c2"
  >
    <span
      class="c3"
    >
      top text
    </span>
    <div
      class="c4 sc-ifAKCX c4 c5"
      id="wrapperRef"
    >
      <div
        id="containerRef"
      >
        <div
          class="c5"
        >
          <span
            class="c6"
            data-testid="dollarSign"
          >
            $
          </span>
          <span
            class="c7"
            data-testid="priceValue"
          >
            25
          </span>
        </div>
      </div>
      <span
        class="c8"
        data-testid="rateText"
      >
        /month
      </span>
    </div>
  </div>
  <hr
    class="c9"
  />
  <div>
    <span
      class="c10"
    >
      bottom text
    </span>
    <span
      class="c11"
      id="footnoteLinks"
    />
  </div>
</div>
`;
